--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<meta name="author" content="Ray Hyde | www.rayhyde.nl">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/bootstrap-add.css">
 	<link rel="stylesheet" href="css/sequential_activation.css">
 </head>
 
@@ -24,7 +23,7 @@
 					<h2>a jQuery plugin to automatically activate elements, one after the other</h2>
 					<p>Make running lights, blinking Christmas decorations, traffic lights &mdash; the possibilities are endless.</p>
 					<p>
-						<a href="downloads/sequential_activation.zip" class="btn btn-primary btn-lg ">Download plugin (zip)</a>
+						<a href="https://github.com/RayHyde/sequential_activation" class="btn btn-primary btn-lg ">Download from Github</a>
 					</p>
 				</div>
 			</div>
@@ -241,7 +240,7 @@ viewBox="0 0 821 1575"
 		<section>
 			<div class="row">
 				<div class="col-xs-12">
-					<p><a href="downloads/sequential_activation.zip" class="btn btn-primary btn-lg download">Download plugin (zip)</a></p>
+					<p><a href="https://github.com/RayHyde/sequential_activation" class="btn btn-primary btn-lg download">Download from Github</a></p>
 				</div>
 			</div>
 		</section>
