--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <p><h1>Sequential activation: activate elements one after the other</h1></p>
 <p>Sometimes you need to automatically set elements active, one after the other, e.g. for creating running lights.</p>
 
-<p>See it in action: <a href="http://rayhyde.github.io/sequential_activation/">http://rayhyde.github.io/recipe_calculator/</a></p>
+<p>See it in action: <a href="http://rayhyde.github.io/sequential_activation/">http://rayhyde.github.io/sequential_activation/</a></p>
 
 <h2>The Goodies</h2>
 <p>You can activate the plugin on as many elements on the page as you need, bar the processing limits of your viewer&#39;s computer, of course.</p>
